[package]
name = "cge"
version = "0.1.0"
authors = ["Edu Pagotto <edupagotto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sdl2 = "0.34.3"
#sdl2_image = "0.25.0"
#sdl2_ttf = "0.25.1"
glm = "0.2.3"
opengles = "0.1.2"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]